# vanilla-ebook-reader

./: .gitignore  Cargo.toml  README.md  flutter_rust_bridge.yaml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/vanillaebookreader/: MainActivity.kt  ReaderBridge.kt
android/app/src/main/res/values/: strings.xml
crates/ebook-core/: Cargo.toml
crates/ebook-core/src/: lib.rs  library.rs  model.rs  playback.rs  text.rs
crates/ebook-reader/: Cargo.toml  build.rs
crates/ebook-reader/src/: android.rs  app.rs  lib.rs  main.rs  persistence.rs  tts.rs
crates/ebook-reader/ui/: app.slint
flutter_client/: README.md  pubspec.yaml
flutter_client/assets/models/: en_us_amy_medium.json  en_us_amy_medium.onnx
flutter_client/integration_test/: mock_backend_smoke_test.dart
flutter_client/lib/: api.dart  api.freezed.dart  engine.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  main.dart
flutter_client/lib/genui/: agent.dart  components.dart  panel.dart
flutter_client/lib/services/: audio_handler.dart  llm_models.dart  model_repository.dart  text_analysis.dart  tts_service.dart
flutter_client/lib/ui/: editor_screen.dart  player_screen.dart
flutter_client/test/: widget_test.dart
flutter_client/test/performance/: text_pipeline_perf_test.dart
rust_core/: Cargo.toml  build.rs
rust_core/src/: api.rs  bridge_generated.rs  lib.rs
rust_core/src/audio/: buffer_generator.rs  mod.rs  sync_map.rs
rust_core/src/engine/: mod.rs  piper.rs
tools/: build_all.sh
tools/stubs/: dart  flutter
vcpkg-ports/flite/: portfile.cmake  vcpkg.json
