[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"
description = "High-performance streaming TTS core exposed over Flutter Rust Bridge"
license = "MIT OR Apache-2.0"
repository = "https://example.com/tts-beast"

[lib]
name = "rust_core"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
flutter_rust_bridge = { version = "=2.11.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
once_cell = "1"
parking_lot = "0.12"

[features]
default = ["mock_bridge"]
piper = []
bridge = ["flutter_rust_bridge"]
mock_bridge = []
flutter_rust_bridge = ["dep:flutter_rust_bridge"]

[build-dependencies]
cc = "1"

[dev-dependencies]
assert_matches = "1"
