[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"
description = "High-performance streaming TTS core exposed over Flutter Rust Bridge"
license = "MIT OR Apache-2.0"
repository = "https://example.com/tts-beast"

[lib]
name = "rust_core"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
flutter_rust_bridge = { version = "=2.11.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
once_cell = "1"
parking_lot = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.1"
log = "0.4"

[features]
default = ["bridge", "piper"]
piper = ["dep:piper-rs"]
bridge = ["flutter_rust_bridge"]

[build-dependencies]
cc = "1"

[dev-dependencies]
assert_matches = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false

[patch.crates-io]
ort = { git = "https://github.com/pykeio/ort", tag = "v2.0.0-rc.9" }
ort-sys = { git = "https://github.com/pykeio/ort", tag = "v2.0.0-rc.9", package = "ort-sys" }

[target.'cfg(not(target_os = "windows"))'.dependencies.piper-rs]
version = "0.1.9"
optional = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
